@startuml

title __ENGINE's Class Diagram__\n

  namespace ro.uaic.info.engine {
    class ro.uaic.info.engine.Debug {
        + Debug()
        + printMessage()
        + setDebugLevel()
    }
  }
  

  namespace ro.uaic.info.engine {
    enum DebugLevel {
      DEBUG_LEVEL_ALL_MESSAGES
      DEBUG_LEVEL_CRITICAL
      DEBUG_LEVEL_IMPORTANT
      DEBUG_LEVEL_NONE
    }
  }
  

  namespace ro.uaic.info.engine {
    class ro.uaic.info.engine.Engine {
        {static} + DEFAULT_FPS_TARGET : int
        - drawMeshes : boolean
        - initialized : boolean
        {static} - instance : Engine
        - isActive : boolean
        - targetFPS : int
        + debug()
        + debug()
        + forceDebug()
        + forceDebug()
        + getDrawMeshes()
        + getGameObjects()
        {static} + getInstance()
        + getWindow()
        + initialiseEngine()
        + run()
        + setDebugLevel()
        + setDrawMeshes()
        + setGameWindow()
        + stopEngine()
        - Engine()
        - redraw()
        - update()
    }
  }
  

  ro.uaic.info.engine.Debug o-- ro.uaic.info.engine.Debug.DebugLevel : debugLevel
  ro.uaic.info.engine.Debug +-down- ro.uaic.info.engine.Debug.DebugLevel
  ro.uaic.info.engine.Engine o-- ro.uaic.info.engine.Debug : debugHandler
  ro.uaic.info.engine.Engine o-- ro.uaic.info.engine.entity.GameObjects : gameObjects
  ro.uaic.info.engine.Engine o-- ro.uaic.info.engine.window.GameWindow : window

@enduml
